project(flipmo)
find_package(Qt4 4.4.3 COMPONENTS QtCore QtGui REQUIRED )
include(${QT_USE_FILE})
QT4_WRAP_CPP( MOC_FILES flipmo.h )
#include_directories( ${CMAKE_BINARY_DIR} )
add_executable(${PROJECT_NAME} flipmo.cpp ${MOC_FILES} )
add_dependencies( ${PROJECT_NAME} ${MOC_FILES} )
target_link_libraries(${PROJECT_NAME}  ${QT_LIBRARIES})
